force-app/main/default/objects/ContractLineItem/fields/HRCSVC_ERP_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_Line_Number__c</fullName>
    <label>ERP Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>