force-app/main/default/objects/ContractLineItem/fields/HRCSVC_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>HRCSVC_Service_Package__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>