force-app/main/default/objects/ContractLineItem/fields/HRCSVC_Suspend_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Suspend_Date__c</fullName>
    <label>Suspend Date</label>
    <type>Date</type>
</CustomField>